@@ -1,4 +1,5 @@
 2.61    * add CONFIGURE_REQUIRES META
+        * add --gdlib_config_path
 2.60    * add missing methods newFromWBMP, newFromXbm,
           (RT #68784) and some missing docs
         * Add --lib_fontconfig_path, --fcgi options
